integ-tests/tests/snapshots/parser__bad_keys__empty_pipe.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ empty_pipe:1:3
  │
1 │ ""|=3
  │   ^ unexpected character '|'


